--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "fso-table-syntax",
   "displayName": "FreespaceOpen Table Syntax",
   "description": "Syntax highlighting for FreespaceOpen table and mission files",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/MjnMixael/FSO-Table-Syntax-Extension"
+  },
   "engines": {
     "vscode": "^1.96.0"
   },
