--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "fso-table-syntax",
   "displayName": "FreespaceOpen Table Syntax",
   "description": "Syntax highlighting for FreespaceOpen table and mission files",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "publisher": "MikeNelson",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/MjnMixael/FSO-Table-Syntax-Extension"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MjnMixael/FSO-Table-Syntax-Extension"
   },
   "icon": "resources/extension_icon.png",
   "engines": {
@@ -19,8 +19,16 @@
     "languages": [
       {
         "id": "freespaceopen",
-        "aliases": ["FreespaceOpen", "freespaceopen"],
-        "extensions": [".tbl", ".tbm", ".fc2", ".fs2"],
+        "aliases": [
+          "FreespaceOpen",
+          "freespaceopen"
+        ],
+        "extensions": [
+          ".tbl",
+          ".tbm",
+          ".fc2",
+          ".fs2"
+        ],
         "configuration": "./language-configuration.json",
         "icon": {
           "light": "resources/fso_syntax_icon.png",
@@ -34,7 +42,7 @@
         "scopeName": "source.fso",
         "path": "./syntaxes/fso_table_language.tmLanguage.json",
         "embeddedLanguages": {
-            "meta.embedded.lua.fso": "lua"
+          "meta.embedded.lua.fso": "lua"
         }
       }
     ],
